# cdt-clang

./: CMakeLists.txt
include/clang/AST/: Decl.h  DeclCXX.h
include/clang/Basic/: Attr.td  AttrDocs.td
include/eosio/: gen.hpp  utils.hpp
include/eosio/whereami/: linux.hpp  whereami.hpp
lib/AST/: Decl.cpp
lib/Basic/Targets/: WebAssembly.h
lib/CodeGen/: CGDecl.cpp  CodeGenFunction.cpp  CodeGenModule.cpp
lib/Driver/ToolChains/: Darwin.cpp
lib/Lex/: PPMacroExpansion.cpp
lib/Sema/: SemaDeclAttr.cpp
plugins/: CMakeLists.txt
plugins/eosio_plugin/: CMakeLists.txt  eosio_autogen.cpp
plugins/sysio_plugin/: CMakeLists.txt  sysio_autogen.cpp
test/CXX/special/class.copy/: implicit-move-def.cpp  p15-inclass.cpp
test/CodeGen/: .!65892!string-literal-unicode-conversion.c
test/CodeGenCXX/: catch-undef-behavior.cpp  constructor-init.cpp  cxx11-special-members.cpp  cxx11-unrestricted-union.cpp  cxx1z-copy-omission.cpp  dllexport-members.cpp  dllimport-members.cpp  implicit-exception-spec.cpp  move-assignment.cpp  no-elide-constructors.cpp  rvalue-references.cpp  tail-padding.cpp  virtual-implicit-move-assignment.cpp
test/CodeGenCoroutines/: coro-params.cpp
test/CodeGenObjCXX/: arc-move.mm  objc-weak.mm
test/Driver/: darwin-infer-simulator-sdkroot.c  darwin-ld.c  darwin-version.c  lit.local.cfg
test/Index/Core/: index-source.cpp
tools/: CMakeLists.txt
tools/extra/: CMakeLists.txt  compiler_options.hpp.in  compiler_options.ipp.in  whereami.h
tools/extra/cppeos_tool/: CMakeLists.txt  cppeos.cpp
tools/extra/eosio_abigen_tool/: CMakeLists.txt  abi.hpp  eosio-abigen.cpp.in
tools/extra/eosio_c_tool/: .eosio.cpp.cpp.in.swp  CMakeLists.txt  eosio-cc.cpp.in  eosio-cpp.cpp.in  eosio.cc.cpp.in  eosio.compiler_options.ipp  eosio.cpp.cpp.in
tools/extra/eosio_ld_tool/: CMakeLists.txt  eosio-ld.cpp.in  eosio.ld.cpp.in
tools/extra/include/: compiler_options.hpp.in
tools/extra/whereami/: whereami.cpp
